--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-api-automation-restassured/build/
+api-automation/build/
 *.class
 .DS_Store
-api-automation-restassured/.gradle
-api-automation-restassured/.idea/*
+api-automation/.gradle
+api-automation/.idea/*
 .vscode
-api-automation-restassured/out
-api-automation-restassured/tests_output
-api-automation-restassured/test-output
-api-automation-restassured/.classpath
-api-automation-restassured/.project
-api-automation-restassured/.settings/
-api-automation-restassured/bin/
-api-automation-restassured/tests_output/
+api-automation/out
+api-automation/tests_output
+api-automation/test-output
+api-automation/.classpath
+api-automation/.project
+api-automation/.settings/
+api-automation/bin/
+api-automation/tests_output/
 .gradle
 .idea
 
