--- a/api-automation/build.gradle
+++ b/api-automation/build.gradle
@@ -13,7 +13,7 @@ repositories {
 dependencies {
 // https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator
 compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.0'
-
+compile group: 'org.yaml', name: 'snakeyaml', version:'1.21'
     compile group: 'com.github.fge', name: 'json-schema-validator', version:'2.2.6'
     compile group: 'com.github.fge', name: 'json-schema-core', version:'1.2.5'
 	compile group: 'com.jayway.restassured', name: 'rest-assured', version:'2.9.0'
@@ -64,7 +64,8 @@ repositories {
 }
 
 test { 
+
     useTestNG() {
-        suites "testNG.xml"
+        suites "logintest.xml"
     }
 }
