--- a/api-automation/build.gradle
+++ b/api-automation/build.gradle
@@ -66,6 +66,7 @@ repositories {
 test { 
 
     useTestNG() {
+    systemProperty "envName", System.getProperty("envName")
         suites "logintest.xml"
     }
 }
