--- a/api-automation/build.gradle
+++ b/api-automation/build.gradle
@@ -66,7 +66,9 @@ repositories {
 test { 
 
     useTestNG() {
-    systemProperty "envName", System.getProperty("envName")
+    	systemProperty "env", System.getProperty("env")
+    	systemProperty "username", System.getProperty("username")
+    	systemProperty "password", System.getProperty("password")
         suites "logintest.xml"
     }
 }
