--- a/api-automation/build.gradle
+++ b/api-automation/build.gradle
@@ -69,6 +69,6 @@ test {
     	systemProperty "env", System.getProperty("env")
     	systemProperty "username", System.getProperty("username")
     	systemProperty "password", System.getProperty("password")
-        suites "logintest.xml"
+        suites "testNG.xml"
     }
 }
