removing slash with base url

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -1,36 +1,36 @@
 ---
 envName: "app"
-appURL: "https://app.sentieo.com/"
+appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 ---
 envName: "balyasny"
-appURL: "https://balyasny.sentieo.com/"
+appURL: "https://balyasny.sentieo.com"
 userAppUrl: "https://user-balyasny.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 ---
 envName: "citadel"
-appURL: "https://citadel.sentieo.com/"
+appURL: "https://citadel.sentieo.com"
 userAppUrl: "https://user-citadel.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 ---
 envName: "tiger"
-appURL: "https://tigertest.sentieo.com/"
+appURL: "https://tigertest.sentieo.com"
 userAppUrl: "https://user-tigertest.sentieo.com"
 userName: "tiger.check@testing.sentieo.com"
 password: "Sentieo@321"
 ---
 envName: "psp"
-appURL: "https://psptest.sentieo.com/"
+appURL: "https://psptest.sentieo.com"
 userAppUrl: "https://user-psptest.sentieo.com"
 userName: "psp-sandbox"
 password: "Psp-Sentieo@965"
 ---
 envName: "schroders"
-appURL: "https://schroderstest.sentieo.com/"
+appURL: "https://schroderstest.sentieo.com"
 userAppUrl: "https://user-schroderstest.sentieo.com"
 userName: "schroders.check@scroders-test.com"
 password: "schroders.check258d87b83b"
