adding schroders prod details

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -5,6 +5,18 @@ userAppUrl: "https://user-app.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 ---
+envName: "app2"
+appURL: "https://app2.sentieo.com"
+userAppUrl: "https://user-app2.sentieo.com"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
+---
+envName: "testing"
+appURL: "https://testing.sentieo.com"
+userAppUrl: "https://user-testing.sentieo.com"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
+---
 envName: "balyasny"
 appURL: "https://balyasny.sentieo.com"
 userAppUrl: "https://user-balyasny.sentieo.com"
@@ -40,3 +52,9 @@ appURL: "https://schroderstest.sentieo.com"
 userAppUrl: "https://user-schroderstest.sentieo.com"
 userName: "schroders.check@scroders-test.com"
 password: "schroders.check258d87b83b"
+---
+envName: "schrodersprod"
+appURL: "https://schroders.sentieo.com/"
+userAppUrl: "https://user-schroders.sentieo.com/"
+userName: "test.schroders"
+password: "Sentieo@123"
