remove extra slash

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -60,7 +60,7 @@ userName: "schroders.check"
 password: "Sentieo@123"
 ---
 envName: "schrodersprod"
-appURL: "https://schroders.sentieo.com/"
-userAppUrl: "https://user-schroders.sentieo.com/"
+appURL: "https://schroders.sentieo.com"
+userAppUrl: "https://user-schroders.sentieo.com"
 userName: "test.schroders"
 password: "Sentieo@123"
