changing schroders user

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -62,5 +62,5 @@ password: "Sentieo@123"
 envName: "schrodersprod"
 appURL: "https://schroders.sentieo.com"
 userAppUrl: "https://user-schroders.sentieo.com"
-userName: "test.schroders"
+userName: "test.schroders9"
 password: "Sentieo@123"
