Added error scenarios for notebook public APIs

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -16,6 +16,9 @@ appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
+xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "staging"
 appURL: "https://staging.sentieo.com"
@@ -56,12 +59,18 @@ password: "Psp-Sentieo@965"
 envName: "schroderstest"
 appURL: "https://schroderstest.sentieo.com"
 userAppUrl: "https://user-schroderstest.sentieo.com"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "JSE0VlYu0JaVVtlHzaBWG6YVL4k7V9Nf6RhFmmqm"
+xuserkey: "schroders.check@scroders-test.com"
 userName: "schroders.check"
 password: "Sentieo@123"
 ---
 envName: "schrodersprod"
 appURL: "https://schroders.sentieo.com"
 userAppUrl: "https://user-schroders.sentieo.com"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "jSziazj4aX76oVo82ebXAQ4zRJKCQ996Rpyv0ZS5"
+xuserkey: "bhuvnesh@sentieo.com"
 userName: "test.schroders9"
 password: "Sentieo@123"
 ---
