SG alb changes for api-heartbeat

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -79,3 +79,9 @@ appURL: "https://canyon.sentieo.com"
 userAppUrl: "https://user-canyon.sentieo.com"
 userName: "canyon.demo1"
 password: "Sentieo@123"
+---
+envName: "alb-sg-app"
+appURL: "https://app-alb-singapore-1222712117.ap-southeast-1.elb.amazonaws.com"
+userAppUrl: "https://user-app-alb-singapore-2075556673.ap-southeast-1.elb.amazonaws.com"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
