added canyon test details

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -85,3 +85,9 @@ appURL: "https://app-alb-singapore-1222712117.ap-southeast-1.elb.amazonaws.com"
 userAppUrl: "https://user-app-alb-singapore-2075556673.ap-southeast-1.elb.amazonaws.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+---
+envName: "canyontest"
+appURL: "https://canyontest.sentieo.com"
+userAppUrl: "https://user-canyontest.sentieo.com"
+userName: "test.canyontest"
+password: "Sentieo@123"
