Added config for app,app2 and citadel

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -4,20 +4,26 @@ appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
+xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "app2"
 appURL: "https://app2.sentieo.com"
 userAppUrl: "https://user-app2.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
+xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "testing"
 appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
-publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
+publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/devv1"
+xapikey: "2VKh0Xjer47YZAQKfI9NB58aqQCKl5ja7FmWvADY"
 xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "staging"
@@ -37,6 +43,9 @@ appURL: "https://citadel.sentieo.com"
 userAppUrl: "https://user-citadel.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "oLzhCLPyFS1oBb9FZDY9K2yywkLKHqv31UgIyQ6X"
+xuserkey: ""
 ---
 envName: "tigertest"
 appURL: "https://tigertest.sentieo.com"
