--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -8,6 +8,12 @@ publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
 xuserkey: "akash.aggarwal@sentieo.com"
 ---
+envName: "app2"
+appURL: "https://app2.sentieo.com"
+userAppUrl: "https://user-app2.sentieo.com"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
+---
 envName: "app-nonadmin"
 appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
