response Messages were changed in sec master api

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -17,8 +17,8 @@ password: "DGL=14412jg"
 envName: "app-nonadmin"
 appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
-userName: "akash.aggarwal@sentieo.com"
-password: "Samsung@91"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
 publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "YJgvtmHEWY39vxITA2fDW8cdrH6s4Epz9bYvlACE"
 xuserkey: "akash.aggarwal@sentieo.com"
@@ -55,7 +55,7 @@ appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
-publicApiUrl: "https://api.sentieo.com"
+publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
 xuserkey: "alphagani35@gmail.com"
 ---
