fixed validation condition, added rc in yaml file

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -154,3 +154,9 @@ appURL: "https://canyontest.sentieo.com"
 userAppUrl: "https://user-canyontest.sentieo.com"
 userName: "test.canyontest"
 password: "Sentieo@123"
+---
+envName: "rc"
+appURL: "https://rc.sentieo.com"
+userAppUrl: "https://user-rc.sentieo.com"
+userName: "alphagani35@gmail.com"
+password: "DGL=14412jg"
