adding a non-ticker entitiy in data provider, 1 test for mobile and 1 test for public api

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -56,26 +56,35 @@ userAppUrl: "https://user-testing.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
-xuserkey: "alphagani35@gmail.com"
+xapikey: "OSyCmDSxop3P1W00smiUaaS8JBzfBy55rmD47GRg"
+xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "testing-devv1"
 appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
-userName: "akash.aggarwal@sentieo.com"
+userName: "testakash@testing.sentieo.com"
 password: "Samsung@91"
 publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/devv1"
 xapikey: "2VKh0Xjer47YZAQKfI9NB58aqQCKl5ja7FmWvADY"
-xuserkey: "akash.aggarwal@sentieo.com"
+xuserkey: "testakash@testing.sentieo.com"
 ---
 envName: "testing-nonadmin"
 appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
-userName: "akash.aggarwal@sentieo.com"
-password: "Samsung@91"
+userName: "testakash@testing.sentieo.com"
+password: "Sentieo@123"
 publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "cDb0NIlfed5R7rtvfeXe8aYTlvfJMndF4GybVTZ9"
-xuserkey: "akash.aggarwal@sentieo.com"
+xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
+xuserkey: "testakash@testing.sentieo.com"
+---
+envName: "testing-nonadmin1"
+appURL: "https://testing.sentieo.com"
+userAppUrl: "https://user-testing.sentieo.com"
+userName: "gaurav.anand@sentieo.com"
+password: "Gaurav@123"
+publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/devv1"
+xapikey: "2VKh0Xjer47YZAQKfI9NB58aqQCKl5ja7FmWvADY"
+xuserkey: "gaurav.anand@sentieo.com"
 ---
 envName: "staging"
 appURL: "https://staging.sentieo.com"
