added sandbox in yaml

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -169,3 +169,9 @@ appURL: "https://rc.sentieo.com"
 userAppUrl: "https://user-rc.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+---
+envName: "sandbox"
+appURL: "https://sandbox.sentieo.com"
+userAppUrl: "https://user-sandbox.sentieo.com"
+userName: "sandbox.test"
+password: "Sentieo@123"
