--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -5,8 +5,8 @@ userAppUrl: "https://user-app.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
-xuserkey: "akash.aggarwal@sentieo.com"
+xapikey: "yfgws2HSYW6cJti57Ml748bLgwWoJmWw7Sbr4Utb"
+xuserkey: "testing.akash@testing.sentieo.com"
 ---
 envName: "app2"
 appURL: "https://app2.sentieo.com"
@@ -56,7 +56,7 @@ userAppUrl: "https://user-testing.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "OSyCmDSxop3P1W00smiUaaS8JBzfBy55rmD47GRg"
+xapikey: "FZZbe4oBBX7dd3XMQjzw02e5JTEfZvFS5mNKi47G"
 xuserkey: "akash.aggarwal@sentieo.com"
 ---
 envName: "testing-devv1"
