added sandbox env config for APIs

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -175,3 +175,12 @@ appURL: "https://sandbox.sentieo.com"
 userAppUrl: "https://user-sandbox.sentieo.com"
 userName: "sandbox.test"
 password: "Sentieo@123"
+---
+envName: "sandbox-api"
+appURL: "https://sandbox.sentieo.com"
+userAppUrl: "https://user-sandbox.sentieo.com"
+userName: "akash.test@testing.sentieo.com"
+password: "Sentieo@123"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "8v0wLjeCfz9BNiNms2adL79jDLFjfXhI3rEZnRFi"
+xuserkey: "akash.test@testing.sentieo.com"
