--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -17,11 +17,11 @@ password: "DGL=14412jg"
 envName: "app-nonadmin"
 appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
-userName: "alphagani35@gmail.com"
-password: "DGL=14412jg"
+userName: "testing.akash@testing.sentieo.com"
+password: "Sentieo@123"
 publicApiUrl: "https://api.sentieo.com/v1"
-xapikey: "YJgvtmHEWY39vxITA2fDW8cdrH6s4Epz9bYvlACE"
-xuserkey: "akash.aggarwal@sentieo.com"
+xapikey: "yfgws2HSYW6cJti57Ml748bLgwWoJmWw7Sbr4Utb"
+xuserkey: "testing.akash@testing.sentieo.com"
 ---
 envName: "app-admin"
 appURL: "https://app.sentieo.com"
