App config name changed

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -14,14 +14,14 @@ userAppUrl: "https://user-app2.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
 ---
-envName: "app-nonadmin"
+envName: "app-public-api"
 appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
-userName: "testing.akash@testing.sentieo.com"
+userName: "apiautomate@testing.sentieo.com"
 password: "Sentieo@123"
 publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "yfgws2HSYW6cJti57Ml748bLgwWoJmWw7Sbr4Utb"
-xuserkey: "testing.akash@testing.sentieo.com"
+xuserkey: "apiautomate@testing.sentieo.com"
 ---
 envName: "app-admin"
 appURL: "https://app.sentieo.com"
