--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -184,3 +184,9 @@ password: "Sentieo@123"
 publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "8v0wLjeCfz9BNiNms2adL79jDLFjfXhI3rEZnRFi"
 xuserkey: "akash.test@testing.sentieo.com"
+---
+envName: "mobile-api-app"
+appURL: "https://app.sentieo.com"
+userAppUrl: "https://user-app.sentieo.com"
+userName: "test.mobile02@testing.sentieo.com"
+password: "Sentieo@123"
