--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -68,7 +68,7 @@ publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/devv1"
 xapikey: "2VKh0Xjer47YZAQKfI9NB58aqQCKl5ja7FmWvADY"
 xuserkey: "testakash@testing.sentieo.com"
 ---
-envName: "testing-nonadmin"
+envName: "testing-public-api"
 appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
 userName: "testakash@testing.sentieo.com"
@@ -91,6 +91,15 @@ appURL: "https://staging.sentieo.com"
 userAppUrl: "https://user-staging.sentieo.com"
 userName: "alphagani35@gmail.com"
 password: "DGL=14412jg"
+---
+envName: "staging-public-api"
+appURL: "https://staging.sentieo.com"
+userAppUrl: "https://user-staging.sentieo.com"
+userName: "apiautomate@testing.sentieo.com"
+password: "Sentieo@123"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "8EBGrgfsUCk5Hj151Czj426Lz8HVkeOaQslkcYcj"
+xuserkey: "apiautomate@testing.sentieo.com"
 ---
 envName: "balyasny"
 appURL: "https://balyasny.sentieo.com"
