added app2 config

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -32,14 +32,14 @@ publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
 xuserkey: "akash.aggarwal@sentieo.com"
 ---
-envName: "app2-admin"
+envName: "app2-public-api"
 appURL: "https://app2.sentieo.com"
 userAppUrl: "https://user-app2.sentieo.com"
-userName: "akash.aggarwal@sentieo.com"
-password: "Samsung@91"
-publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/app2"
-xapikey: "3syZzc0Epp4r52omw9M6U2owGBh5byxZ2EzTs67w"
-xuserkey: "akash.aggarwal@sentieo.com"
+userName: "apiautomate@testing.sentieo.com"
+password: "Sentieo@123"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "0CratyGAi19R8BLK2hmIh8bgVHGVmpFOaOpbpcaf"
+xuserkey: "apiautomate@testing.sentieo.com"
 ---
 envName: "app2-nonadmin"
 appURL: "https://app2.sentieo.com"
