--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -110,6 +110,15 @@ publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "ZQ0NWh9GND4Y8S4RftTlw8e5dkkVq0bi2gP6jOmu"
 xuserkey: "alphagani35@gmail.com"
 ---
+envName: "bam-public-api"
+appURL: "https://balyasny.sentieo.com"
+userAppUrl: "https://user-balyasny.sentieo.com"
+userName: "testing@sentieo.com"
+password: "Sentieo@123"
+publicApiUrl: "https://api.sentieo.com/v1"
+xapikey: "ZQ0NWh9GND4Y8S4RftTlw8e5dkkVq0bi2gP6jOmu"
+xuserkey: "testing@sentieo.com"
+---
 envName: "citadel"
 appURL: "https://citadel.sentieo.com"
 userAppUrl: "https://user-citadel.sentieo.com"
