configured mobile APIs and added calendar API

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -208,3 +208,6 @@ appURL: "https://app.sentieo.com"
 userAppUrl: "https://user-app.sentieo.com"
 userName: "test.mobile02@testing.sentieo.com"
 password: "Sentieo@123"
+appVersion: "7.2"
+iosVersion: "13.2.2"
+deviceName: "iphone"
