updating my creds on testing env

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -81,7 +81,7 @@ envName: "testing-nonadmin1"
 appURL: "https://testing.sentieo.com"
 userAppUrl: "https://user-testing.sentieo.com"
 userName: "gaurav.anand@sentieo.com"
-password: "Gaurav@123"
+password: "Sentieo@123"
 publicApiUrl: "https://pzeiwi7e75.execute-api.us-east-1.amazonaws.com/devv1"
 xapikey: "2VKh0Xjer47YZAQKfI9NB58aqQCKl5ja7FmWvADY"
 xuserkey: "gaurav.anand@sentieo.com"
