add cred wellsfargo

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -211,3 +211,9 @@ password: "Sentieo@123"
 appVersion: "7.2"
 iosVersion: "13.2.2"
 deviceName: "iphone"
+---
+envName: "wellsfargo"
+appURL: "https://wellsfargo.sentieo.com"
+userAppUrl: "https://user-wellsfargo.sentieo.com"
+userName: "test.user2@wellsfargo.com"
+password: "Sentieo@123"
