--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -212,8 +212,14 @@ appVersion: "7.2"
 iosVersion: "13.2.2"
 deviceName: "iphone"
 ---
-envName: "wellsfargo"
+envName: "wellsfargo_2"
 appURL: "https://wellsfargo.sentieo.com"
 userAppUrl: "https://user-wellsfargo.sentieo.com"
 userName: "test.user2@wellsfargo.com"
+password: "Sentieo@987"
+---
+envName: "wellsfargo_1"
+appURL: "https://wellsfargo.sentieo.com"
+userAppUrl: "https://user-wellsfargo.sentieo.com"
+userName: "test.user"
 password: "Sentieo@987"
