changed schroders account

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -161,7 +161,7 @@ userAppUrl: "https://user-schroders.sentieo.com"
 publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "jSziazj4aX76oVo82ebXAQ4zRJKCQ996Rpyv0ZS5"
 xuserkey: "bhuvnesh@sentieo.com"
-userName: "test.schroders9"
+userName: "test.schroders"
 password: "Sentieo@123"
 ---
 envName: "canyon"
