add in xml file

--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -105,7 +105,7 @@ envName: "balyasny"
 appURL: "https://balyasny.sentieo.com"
 userAppUrl: "https://user-balyasny.sentieo.com"
 userName: "alphagani35@gmail.com"
-password: "DGL=14412jg"
+password: "Gani35!@#*()"
 publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "ZQ0NWh9GND4Y8S4RftTlw8e5dkkVq0bi2gP6jOmu"
 xuserkey: "alphagani35@gmail.com"
