--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -144,7 +144,7 @@ envName: "psp"
 appURL: "https://psptest.sentieo.com"
 userAppUrl: "https://user-psptest.sentieo.com"
 userName: "psp-sandbox"
-password: "Psp-Sentieo@965"
+password: "@lph@123()"
 ---
 envName: "schroderstest"
 appURL: "https://schroderstest.sentieo.com"
