--- a/api-automation/src/test/resources/env_details.yaml
+++ b/api-automation/src/test/resources/env_details.yaml
@@ -153,7 +153,7 @@ publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "JSE0VlYu0JaVVtlHzaBWG6YVL4k7V9Nf6RhFmmqm"
 xuserkey: "schroders.check@scroders-test.com"
 userName: "schroders.check"
-password: "Sentieo@123"
+password: "@lph@123()"
 ---
 envName: "schrodersprod"
 appURL: "https://schroders.sentieo.com"
@@ -162,13 +162,13 @@ publicApiUrl: "https://api.sentieo.com/v1"
 xapikey: "jSziazj4aX76oVo82ebXAQ4zRJKCQ996Rpyv0ZS5"
 xuserkey: "bhuvnesh@sentieo.com"
 userName: "test.schroders"
-password: "Sentieo@123"
+password: "@lph@123()"
 ---
 envName: "canyon"
 appURL: "https://canyon.sentieo.com"
 userAppUrl: "https://user-canyon.sentieo.com"
 userName: "canyon.demo1"
-password: "Sentieo@123"
+password: "@lph@123()"
 ---
 envName: "alb-sg-app"
 appURL: "https://app-alb-singapore-1222712117.ap-southeast-1.elb.amazonaws.com"
@@ -180,7 +180,7 @@ envName: "canyontest"
 appURL: "https://canyontest.sentieo.com"
 userAppUrl: "https://user-canyontest.sentieo.com"
 userName: "test.canyontest"
-password: "Sentieo@123"
+password: "@lph@123()"
 ---
 envName: "rc"
 appURL: "https://rc.sentieo.com"
@@ -216,10 +216,10 @@ envName: "wellsfargo_2"
 appURL: "https://wellsfargo.sentieo.com"
 userAppUrl: "https://user-wellsfargo.sentieo.com"
 userName: "test.user2@wellsfargo.com"
-password: "Sentieo@123"
+password: "@lph@123()"
 ---
 envName: "wellsfargo_1"
 appURL: "https://wellsfargo.sentieo.com"
 userAppUrl: "https://user-wellsfargo.sentieo.com"
 userName: "test.user"
-password: "Sentieo@123"
+password: "@lph@123()"
