add watch sharing cases

--- a/api-automation/config.properties
+++ b/api-automation/config.properties
@@ -5,5 +5,32 @@ username =
 password =
 shareDashboard = bhaskar@sentieo.com
 shareDashboardPassword =Sentieo.789
+testing2user=devesh.arora@sentieo.com
+testing2userpass=times@1234
+app2user=test.usercheck461@testing.sentieo.com
+app2userpass=Sentieo@123
+appUserName = testsharenotes@gmail.com
+appPassword = sentieo@123
+globalUser=alphagani35@gmail.com
+globalPass=Gani35!@#*()
 usernameAutomation=alphagani35@gmail.com
 passwordAutomation=DGL=14412jg
+shared_with_name_testing1= bhaskar
+shared_with_display_name_testing1=Bhaskar Bhaskar
+shared_with_name_testing2=devesh.arora
+shared_with_display_name_testing2=Devesh Arora
+shared_with_name_app1=testshare.notes
+shared_with_display_name_app1=Testshare Notes
+shared_with_name_app2=test.usercheck461
+shared_with_display_name_app2=Test Usercheck461
+shared_with_name_global1=autotester
+shared_with_display_name_global1=Automation Testuser
+shared_with_name_global2=
+shared_with_display_name_global2=	
+43b9e775b843f194fb96d266684cfb53-cb=flipkart 
+d5cf9988de3bfe4cabd23ce1e49f8d75-cb=swiggy
+1fc2a3aa15256f2b48b6d5b58fe379a3-cb=hike
+5fdbcbf16f4046aba834788bb320eea9-cb=loy
+fa3a634c9cec4f6892580a5d2545c027-cb=Shenzhoutong Touzi Jituan
+user.test9
+Gani35!@#*()
